--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
+.idea/jpa-buddy.xml
+.idea/misc.xml
+.idea/uiDesigner.xml
 
 ### Eclipse ###
 .apt_generated
