--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 ### IntelliJ IDEA ###
 out/
 !**/src/main/**/out/
@@ -6,6 +5,7 @@ out/
 .idea/jpa-buddy.xml
 .idea/misc.xml
 .idea/uiDesigner.xml
+build/
 
 ### Eclipse ###
 .apt_generated
@@ -32,3 +32,4 @@ bin/
 ### Mac OS ###
 .DS_Store
 /codingTest.iml
+/.gradle/
